# dupsonic

./: ADVANCED.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
hooks/: pre-commit
src/: acoustid.rs  database.rs  exec.rs  fingerprint.rs  fpcalc.rs  hash.rs  identify.rs  keep.rs  lib.rs  main.rs  matcher.rs  output.rs  scanner.rs  tags.rs  web.rs  web_ui.html
src/container_repair/: mod.rs  mp4.rs
tests/: integration_test.rs
tests/fixtures/classify/: chord.flac  hires.flac  long.flac  lowres.flac  retagged.flac
