[package]
name = "dupsonic"
version = "0.1.0"
edition = "2021"
description = "Find duplicate audio files using acoustic fingerprinting (chromaprint/AcoustID)"
license = "GPL-2.0-or-later"
repository = "https://github.com/zas/dupsonic"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Audio decoding (0.5 — stable API; 0.6 has breaking changes)
symphonia = { version = "0.5", features = ["all"] }

# Acoustic fingerprinting
rusty-chromaprint = "0.3"

# Database/cache
rusqlite = { version = "0.35", features = ["bundled"] }

# Parallelism
rayon = "1.10"

# Progress reporting
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File walking
walkdir = "2.5"

# Cross-platform paths
directories = "6.0"

[dev-dependencies]
tempfile = "3.10"
