[package]
name = "dupsonic"
version = "0.1.0"
edition = "2021"
description = "Find duplicate audio files using acoustic fingerprinting (chromaprint/AcoustID)"
license = "GPL-2.0-or-later"
repository = "https://github.com/zas/dupsonic"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Audio decoding
symphonia = { version = "0.6", features = ["all"] }

# Acoustic fingerprinting
rusty-chromaprint = "0.3"

# Database/cache
rusqlite = { version = "0.40", features = ["bundled"] }

# Parallelism
rayon = "1.10"

# Progress reporting
indicatif = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File walking
walkdir = "2.5"

# Cross-platform paths
directories = "6.0"

# HTTP client for AcoustID API
ureq = { version = "3.0", features = ["json"] }

# Base64 encoding for fingerprint submission
base64 = "0.22"

[dev-dependencies]
tempfile = "3.10"
