[package]
name = "dupsonic"
version = "0.2.3"
edition = "2021"
description = "Find duplicate audio files using acoustic fingerprinting (chromaprint/AcoustID)"
license = "GPL-2.0-or-later"
repository = "https://github.com/zas/dupsonic"
keywords = ["audio", "duplicate", "chromaprint", "musicbrainz", "picard"]
categories = ["command-line-utilities", "multimedia::audio"]
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Audio decoding
symphonia = { version = "0.6", features = ["all"] }

# Acoustic fingerprinting (bit-identical to C chromaprint/fpcalc)
chromaprint-next = "0.1"

# Database/cache
rusqlite = { version = "0.40", features = ["bundled"] }

# Parallelism
rayon = "1.10"

# Progress reporting
indicatif = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File walking
walkdir = "2.5"

# Gitignore-style pattern matching
globset = "0.4"

# Regex for --keep strategy
regex = "1.10"

# File hashing (for exact-copy detection)
sha2 = "0.11"

# Cross-platform paths
directories = "6.0"

# HTTP client for AcoustID API
ureq = { version = "3.0", features = ["json"] }

# Web server (for `serve` subcommand)
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# System trash (for web UI delete action)
trash = "5"

[dev-dependencies]
tempfile = "3.10"
